Sua mensagem aqui

--- a/index.html
+++ b/index.html
@@ -179,7 +179,7 @@
         </div>
 
         <div class="btn-container">
-            <a href="#" class="btn btn-buy">$$$ BUY $MONAPE NOW $$$</a>
+            <a href="https://nad.fun/tokens/0x28C35150B75fD028D53Ec0FEDFdc4B24C25b7777" class="btn btn-buy">$$$ BUY $MONAPE NOW $$$</a>
         </div>
 
         <h2 class="section-title">TOKENOMICS</h2>
@@ -256,7 +256,7 @@
     <script>
         function copyToClipboard() {
             // Substitua pelo seu CA real abaixo
-            const ca = "0x0000000000000000000000000000000000000000";
+            const ca = "0x28C35150B75fD028D53Ec0FEDFdc4B24C25b7777";
             
             navigator.clipboard.writeText(ca).then(() => {
                 const msg = document.getElementById("copy-msg");
